--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+diesel = { version = "2.0.0", features = ["sqlite", "numeric"] }
+dotenvy = "0.15"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
 rand = "0.8.5"
 tui = "0.19"
 crossterm = "0.25"
+libsqlite3-sys = "0.25.2"
+
