--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,11 @@ divrem = "1.0.0"
 enum-iterator = "1.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-minus = "5.3.0"
+
+[dependencies.minus]
+version = "^5.0"
+features = [
+   # Enable features you want. For example
+   "static_output",
+   "search"
+]
