--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
-name = "delphea-cli-rust"
-version = "0.1.0"
+name = "delphea"
+version = "0.1.1"
+authors = ["wych(witch) <wych@wychwit.ch>"]
+license = "MIT OR Apache-2.0"
+description = "A tool to help with decision paralysis."
+readme = "README.md"
+homepage = "https://github.com/wychwitch/delphea-cli-rust"
+repository = "https://github.com/wychwitch/delphea-cli-rust"
+keywords = ["cli", "productivity", "organization"]
+categories = ["command-line-utilities"]
 edition = "2021"
 
 [dependencies]
@@ -21,10 +29,3 @@ enum-iterator = "1.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 
-#[dependencies.minus]
-#version = "^5.3.0"
-#features = [
-   # Enable features you want. For example
-#   "static_output",
-#   "search"
-#]
